// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemContainer should render properly and trigger onClick when clicking on item 1`] = `
<div>
  <div
    class="sc-eqUAAy eaVBYP"
    data-testid="item1-uuid"
    tabindex="0"
  />
</div>
`;

exports[`ItemContainer should render properly and trigger onClick when clicking on sub item 1`] = `
<div>
  <div
    class="sc-eqUAAy eaVBYP"
    data-testid="item1-uuid"
    tabindex="0"
  >
    <div
      class="sc-dcJsrY inVwNW"
    >
      <span
        aria-label="item1"
        role="img"
        title="item1"
      >
        <div
          class="sc-gEvEer BvlCj"
          data-mocked="Icon"
          name="add-plus"
          variant="normal"
        />
      </span>
    </div>
    <div
      class="sc-gsFSXq htvJUY"
      color="inherit"
      data-mocked="Box"
      leftpadding="0"
      variant="small"
    >
      item1 text
    </div>
    <div
      class="sc-kAyceB feIvxF"
    >
      <div
        class="sc-gEvEer BvlCj"
        data-mocked="Icon"
        name="caret-right-filled"
      />
    </div>
    <div
      class="sc-iGgWBj jnOJhl"
      tabindex="0"
    >
      <div
        class="sc-eqUAAy eaVBYP"
        data-testid="item2-uuid"
        tabindex="0"
      >
        <div
          class="sc-dcJsrY inVwNW"
        >
          <span
            aria-label="item2"
            role="img"
            title="item2"
          >
            <div
              class="sc-gEvEer BvlCj"
              data-mocked="Icon"
              name="add-plus"
              variant="normal"
            />
          </span>
        </div>
        <div
          class="sc-gsFSXq htvJUY"
          color="inherit"
          data-mocked="Box"
          leftpadding="0"
          variant="small"
        >
          item2 text
        </div>
      </div>
      <div
        class="sc-eqUAAy eaVBYP"
        data-testid="item3-uuid"
        tabindex="0"
      >
        <div
          class="sc-gsFSXq eyMTAq"
          color="inherit"
          data-mocked="Box"
          variant="small"
        >
          item3 text
        </div>
        <div
          class="sc-kAyceB feIvxF"
        >
          <div
            class="sc-gEvEer BvlCj"
            data-mocked="Icon"
            name="caret-right-filled"
          />
        </div>
        <div
          class="sc-iGgWBj jnOJhl"
          tabindex="0"
        >
          <div
            class="sc-eqUAAy bKeEyr"
            data-testid="item4-uuid"
            tabindex="0"
          >
            <div
              class="sc-gsFSXq eyMTAq"
              color="inherit"
              data-mocked="Box"
              variant="small"
            >
              item4 text
            </div>
          </div>
          <div
            class="sc-eqUAAy eaVBYP"
            data-testid="item5-uuid"
            tabindex="0"
          >
            <div
              class="sc-gsFSXq eyMTAq"
              color="inherit"
              data-mocked="Box"
              variant="small"
            >
              item5 text
            </div>
          </div>
          <div
            class="sc-eqUAAy cmYpRs"
            data-testid="item6-uuid"
            tabindex="0"
          >
            <div
              class="sc-gsFSXq eyMTAq"
              color="text-status-inactive"
              data-mocked="Box"
              variant="small"
            >
              item6 text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemContainer should render properly when horizontal 1`] = `
<div>
  <div
    class="sc-eqUAAy dpGazn"
    data-testid="item1-uuid"
    tabindex="0"
  />
</div>
`;

exports[`ItemContainer should render selected item properly with custom menuHeight 1`] = `
<div>
  <div
    class="sc-eqUAAy ktBtPa"
    data-testid="item1-uuid"
    height="100px"
    tabindex="0"
  />
</div>
`;

exports[`ItemContainer should render when feature is enabled 1`] = `
<div>
  <div
    class="sc-eqUAAy eaVBYP"
    data-testid="item1-uuid"
    tabindex="0"
  />
</div>
`;
